--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <a href="index.html">Home</a>
             <div class="website-name">Saket Atreya</div>
             <a href="blog.html">Blog</a>
+            <a href="index.html">About Me</a>
+            <a href="index.html">Skills</a>
             
             <div class="theme-switch-wrapper">
                 <label class="theme-switch" for="checkbox">
